# Projet_Webscraping_Api

./: README.md  pyproject.toml  requirements.txt  reviews.json  reviews_google.json  scraping.ipynb
app/: main.py
app/api/: routes.py
app/models/: schemas.py
functions/: functions_trustpilot.py  functions_yelp.py  response_generator.py
functions/API/: main.py
functions/generator/: response_generator.py
sortie_json/: reviews_google.json  reviews_trustpilot.json  reviews_yelp.json
