[project]
name = "projet-webscraping-api"
version = "0.1.0"
description = ""
authors = [
    {name = "JOREL531",email = "feussijorel@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.2.0,<3.0.0)",
    "numpy (>=1.26.0,<2.0.0)",
    "googlemaps (>=4.10.0,<5.0.0)",
    "selenium (>=4.39.0,<5.0.0)",
    "undetected-chromedriver (>=3.5.5,<4.0.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "python3-distutils (>=0.0.1,<0.0.2)",
    "gpt4all (>=2.0.0,<3.0.0)",
    "langdetect (>=1.0.9,<2.0.0)",
    "fastapi (>=0.109.0,<1.0.0)",
    "uvicorn[standard] (>=0.27.0,<1.0.0)",
    "pydantic (>=2.5.3,<3.0.0)",
    "beautifulsoup4 (>=4.12.3,<5.0.0)",
    "requests (>=2.31.0,<3.0.0)",
    "lxml (>=5.0.0,<6.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)"
]

[tool.poetry]
package-mode = false  # â† AJOUTE CETTE LIGNE

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"